css/myStyle.css
/*
BLACK: rgb: 0,0,0             #000000
BLUE: rgb: 21, 16, 180        #c
PALE BLUE: rgb: 86, 79, 255   #564FFF
FUCHSIA: rgb: 171, 16, 180    #AB10B4
PINK: rgb: 247, 107, 255      #F76BFF
YELLOW: rgb: 255, 255, 47     #FFFF2F
*/

/*Select everything*/
* {
  font-family: 'Roboto', sans-serif;
}
body {
  margin: 0;
}
body::-webkit-scrollbar {
  width: 1rem;
}
body::-webkit-scrollbar-track {
  background: #222222;
}
body::-webkit-scrollbar-thumb {
  background: #564FFF;
}
h1 {
  margin: 20px auto;
  text-align: center;
}

h2 {
  margin: 20px auto;
  text-align: center;
}

button {
  background-color:#564FFF ;
  color: white;
  border: 0.025px solid #1510B4;
  border-radius: 16px;
  height: 50px;
  line-height: normal;
  padding: 8px 24px 8px 24px;
  margin:  8px 8px 8px 0;
  text-align: center;
  font-size: 16px;
  font-weight: 700;
  transition: 80ms;
  align-self: center;
  box-shadow: 0 4px 0 #1510B4;
}

button:hover {
  background-color: #1510B4;
  border: 0.025px solid #FFFFFF;
  color: white;
  cursor: pointer;
}

#signup button {
  background-color: #FFFF2F;
  font-size: 16px;
  color: #1510B4;
}

#signup:hover button {
  background-color: white;
  border: 0.025px solid #1510B4;
  color: #1510B4;
}

button:active{
  transition: 0.025s;
  transform: translateY(4px);
  box-shadow: 0 0 0 #1510B4;
}

.formInputs {
  border: 0.025rem solid #e1e1e1;
  border-radius: 8px;
  width: 100%;
  height: 32px;
  padding-left: 24px;
  box-sizing: border-box;
  margin: 8px 0 12px 0;
}
.radio {
  max-width: 100%;
  display: block;
  margin: 8px 0 12px 0;
}

.searchBar {
  border: 0.025rem solid #e1e1e1;
  border-radius: 8px;
  width: 72%;
  height: 50px;
  line-height: normal;
  padding-left: 24px;
  margin: 4px 16px 4px 0;
  box-sizing: border-box;
}

*::selection {
  background-color: rgba(247, 107, 255, 0.2);
}
label {
  margin-bottom: 12px;
}
.container {
  max-height: 80%;
  min-height: 20%;
  max-width: 50%;
  min-width: 400px;
  border: 0.025em solid #e1e1e1;
  border-radius: 16px;
  padding: 24px;
  margin-bottom: 24px;
  box-shadow: 0 0.5em 1em -0.125em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);
  /*box-shadow: 0 4px 0 #e1e1e1; // SOLID LIGHT GREY SHADOW*/
}

#logoASM {
  width: 8rem;
  display: flex;
  justify-content: center;
  padding: 0.25rem;
}

.nav h1 {
  align-content: center;
}

img {
  width: 20rem;
  /*margin: 0.25rem;*/
  border-radius: 16px;
}
thead {
  background-color: #1510B4;
  color: white;
  font-size: 16px;
  padding: 0.25em;
  margin: 0.25em;
}
table {
  table-layout: fixed;
  width: 50%;
  border-collapse: separate;
  border-radius: 16px;
  text-align: center;
  border: 0.025em solid #e1e1e1;
}
tbody tr:nth-child(odd) {
  background-color: rgba(170, 170, 255, 0.2);
  height: 24px;
}
tbody tr:nth-child(even) {
  background-color: #ffffff;
  height: 24px;
}

th:first-of-type {
  border-top-left-radius: 16px;
}
th:last-of-type {
  height: 36px;
  border-top-right-radius: 16px;
}
tr:last-of-type td:first-of-type {
  border-bottom-left-radius: 16px;
}
tr:last-of-type td:last-of-type {
  border-bottom-right-radius: 16px;
}
.dropdown {
  width: 100%;
  margin-top: 12px;
  display: block;
  padding: 0.5rem 0.75rem;
  background-clip: padding-box;
  border-radius: 8px;
  border: 0.025em solid #e1e1e1;
}
.dropdown label {
  margin-right: 24px;
}

